recyclerview + alles in fragments ipv activities

--- a/app/src/main/res/layout/sportclub_detail_fragment.xml
+++ b/app/src/main/res/layout/sportclub_detail_fragment.xml
@@ -4,17 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SportclubDetailActivity">
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="557dp"
-        android:layout_height="117dp"
+        android:layout_height="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.522"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic[15]" />
+        android:src="@drawable/voetbal"
+        android:scaleType="centerCrop"
+        />
 
     <TextView
         android:id="@+id/textView"
@@ -30,7 +32,7 @@
         app:fontFamily="monospace"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
 
     <TextView
         android:id="@+id/textView2"
