--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">	#000000</color>
     <color name="colorPrimaryLight">#A9A9A9</color>
     <color name="colorAccent">#C0C0C0</color>
+    <color name="colorPrimaryDark">	#000000</color>
+
 </resources>
