--- a/app/src/main/res/layout/activity_main_dualpane.xml
+++ b/app/src/main/res/layout/activity_main_dualpane.xml
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
+    android:baselineAligned="false"
+    android:divider="?android:attr/dividerHorizontal"
+    android:orientation="horizontal"
+    android:showDividers="middle">
+    <!--
+       <FrameLayout
+           android:layout_width="0dp"
+           android:layout_height="match_parent"
+           app:layout_constraintHorizontal_weight="1"
+           android:id="@+id/container_main" >
+       </FrameLayout>
+
+
+
+
+       <FrameLayout
+           android:id="@+id/container_detail"
+           android:layout_width="0dp"
+           android:layout_height="match_parent"
+           android:layout_weight="3"></FrameLayout>-->
 
     <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        app:layout_constraintHorizontal_weight="1"
-        android:id="@+id/container_main" >
-    </FrameLayout>
+        android:id="@+id/container_main"
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
+    android:layout_weight="1"></FrameLayout>
 
     <FrameLayout
         android:id="@+id/container_detail"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3"></FrameLayout>
-</android.support.constraint.ConstraintLayout>
+        android:layout_weight="2"></FrameLayout>
+
+</LinearLayout>
