--- a/app/src/main/res/layout/activity_main_dualpane.xml
+++ b/app/src/main/res/layout/activity_main_dualpane.xml
@@ -6,33 +6,17 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle">
-    <!--
-       <FrameLayout
-           android:layout_width="0dp"
-           android:layout_height="match_parent"
-           app:layout_constraintHorizontal_weight="1"
-           android:id="@+id/container_main" >
-       </FrameLayout>
-
-
-
-
-       <FrameLayout
-           android:id="@+id/container_detail"
-           android:layout_width="0dp"
-           android:layout_height="match_parent"
-           android:layout_weight="3"></FrameLayout>-->
 
     <FrameLayout
         android:id="@+id/container_main"
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="1"></FrameLayout>
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
     <FrameLayout
         android:id="@+id/container_detail"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"></FrameLayout>
+        android:layout_weight="2"/>
 
 </LinearLayout>
