--- a/app/src/main/res/layout/sportclub_detail_fragment.xml
+++ b/app/src/main/res/layout/sportclub_detail_fragment.xml
@@ -9,10 +9,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
     <ImageView
+        android:contentDescription="Header Image"
         android:id="@+id/imageView"
         android:layout_width="557dp"
         android:layout_height="150dp"
